# vm_manager

./: CMakeLists.txt  sonar-project.properties
.github/workflows/: ci.yml  codacy.yml  codeql-analysis.yml  devskim.yml  release.yml  sonar.yml  superlint.yml  tag.yml  upload_release.yml
debian/: changelog  files  rules  vm-manager.substvars
debian/.debhelper/vm-manager/: dbgsym-build-ids
debian/.debhelper/vm-manager/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/vm-manager/dbgsym-root/usr/share/doc/: vm-manager-dbgsym
debian/vm-manager/DEBIAN/: conffiles  control  md5sums
src/: CMakeLists.txt  vm_manager.cc
src/android/: Android.bp  startup_notify.cc
src/cmake/: BoostCMake.cmake  FTXUICMake.cmake  gRPCCMake.cmake  gRPCFetchCMake.cmake
src/guest/: aaf.cc  config_parser.cc  config_parser.h  startup_listener.cc  startup_listener.h  tui.cc  tui.h  vm_builder.cc  vm_builder.h  vm_builder_qemu.cc  vm_builder_qemu.h  vm_interface.cc  vm_interface.h  vm_process.cc  vm_process.h  vsock_cid_pool.cc  vsock_cid_pool.h
src/refactor_cpp/: CMakeLists.txt  utils.cc  vm_manager.cc
src/refactor_cpp/cmake/: BoostCMake.cmake
src/refactor_cpp/guest/: aaf.cc  client.cc  client.h  config_parser.cc  config_parser.h  config_parser_test.cc  message.h  qmp.cc  server.cc  server.h  service.cc  service.h  start.cc.bak  tui.cc  tui.cc.bak  tui.cc.good  tui.h  vm_builder.cc  vm_builder.h  vm_interface.cc  vm_interface.h
src/refactor_cpp/include/: log.h  vm_manager.h
src/refactor_cpp/include/guest/: guest.h
src/services/: client.cc  client.h  message.h  server.cc  server.h  startup_listener_impl.cc  startup_listener_impl.h
src/services/protos/: CMakeLists.txt  host.proto
src/services/vm_plant/: startup_listener.cc
src/utils/: log.h  utils.cc  utils.h
